--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,38 +1,80 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-color: #171311;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.header{
+  background-image: url("../images/background-galaxy.png");
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom;
+  text-align: right;
+  &__logo{
+    margin: 24px 24px 72px;
+    width: 25%;
   }
-  to {
-    transform: rotate(360deg);
+}
+.searcher-form{
+  text-align: center;
+  margin-bottom: 24px;
+  &__input-wrapper{
+    position:relative;
+    display: inline-block;
+  }
+  &__input{
+    padding: 8px;
+    border-radius: 4px;
+    border: 1px solid #35afc7;
+    box-shadow: 0 0 12px 4px #35afc7;
+    padding-left: 32px;
+    &::placeholder{
+      color: #9b9b9b;
+      opacity: 1;
+    }
+  }
+  &__label{
+    position:absolute;
+    left: 8px;
+    top: calc(50% - 0.5em);
+    color: #9b9b9b;
+  }
+}
+
+.character__container{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  grid-gap: 32px;
+  width: 75%;
+  margin: 0 auto;
+  padding-bottom: 32px;
+}
+
+.character{
+  background-color: white;
+  color: black;
+  box-shadow: 0 0px 16px 0px #35afc7;
+  transition: all 0.2s ease-in-out;
+  &:hover{
+    background-color: #35afc7;
+    color:white;
+  }
+  &__avatar{
+    width: 100%;
+    object-fit: cover;
+  }
+  &__info-wrapper{
+    padding: 16px;
+  }
+  &__name{
+    margin: 0 0 16px;
+    font-weight: bold;
+  }
+  &__info-line{
+    font-size: 14px;
+    margin: 0;
+    &-icon{
+      margin-right: 8px;
+    }
   }
 }
