--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,6 +1,7 @@
 .App {
   background-color: #171311;
   min-height: 100vh;
+  font-family: 'Orbitron', sans-serif;
 }
 .header{
   background-image: url("../images/background-galaxy.png");
