Adding components scss and variables to stylesheets

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,111 +1,8 @@
-.App {
-  background-color: #171311;
-  min-height: 100vh;
-  font-family: 'Orbitron', sans-serif;
-}
-.header{
-  background-image: url("../images/background-galaxy.png");
-  width: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: bottom;
-  text-align: right;
-  min-height: 250px;
-  &__logo{
-    margin: 24px 24px 72px;
-    width: 25%;
-    display: inline-block;
-  }
-}
-.searcher-form{
-  text-align: center;
-  margin-bottom: 24px;
-  &__input-wrapper{
-    position:relative;
-    display: inline-block;
-  }
-  &__input{
-    padding: 8px;
-    border-radius: 4px;
-    border: 1px solid #35afc7;
-    box-shadow: 0 0 12px 4px #35afc7;
-    padding-left: 32px;
-    &::placeholder{
-      color: #9b9b9b;
-      opacity: 1;
-    }
-  }
-  &__label{
-    position:absolute;
-    left: 8px;
-    top: calc(50% - 0.5em);
-    color: #9b9b9b;
-  }
-}
+@import './core/variables';
 
-.character__container{
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: auto;
-  grid-gap: 32px;
-  width: 75%;
-  margin: 0 auto;
-  padding-bottom: 32px;
-}
-
-.character{
-  background-color: white;
-  color: black;
-  box-shadow: 0 0px 16px 0px #35afc7;
-  transition: all 0.2s ease-in-out;
-  &:not(.character--no-hover):hover{
-    background-color: #35afc7;
-    color:white;
-    .character__info-line-icon{
-      color: white;
-    }
-  }
-  &__avatar{
-    width: 100%;
-    object-fit: cover;
-  }
-  &__info-wrapper{
-    padding: 16px;
-  }
-  &__name{
-    margin: 0 0 16px;
-    font-weight: bold;
-  }
-  &__info-line{
-    font-size: 14px;
-    margin: 0 0 8px;
-    &--no-margin {
-      margin-bottom: 0;
-    }
-    &-icon{
-      transition: all 0.2s ease-in-out;
-      margin-right: 8px;
-      color: #35afc7;
-    }
-  }
-  &-detail{
-    width: 40%;
-    margin: 0 auto;
-    padding-bottom: 32px;
-    position: relative;
-    top: -112px;
-  }
-}
-.back-button{
-  margin: 0 0 16px;
-  color: white;
-  display: inline-block;
-  font-weight: bold;
-  padding: 8px 16px;
-  background-color: #37b1c7;
-  border-radius: 32px;
-  border: 3px solid #7dc250;
-  &__icon{
-    margin-right: 8px;
-  }
-}
+@import './components/app';
+@import './components/back-button';
+@import './components/character';
+@import './components/character-list';
+@import './components/header';
+@import './components/searcher';
