Add PropTypes to CharacterList and fixed some details on sass

--- a/src/stylesheets/components/_character.scss
+++ b/src/stylesheets/components/_character.scss
@@ -34,10 +34,13 @@
       }
     }
     &-detail{
-      width: 40%;
+      width: 60%;
       margin: 0 auto;
       padding-bottom: $size-l;
       position: relative;
       top: -112px;
+      @include maxi-mobile{
+        width: 40%;
+    }
     }
 }
